--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
+h1 {
   text-align: center;
+  margin: 15px 0 0 0;
+  color: crimson;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home {
+  text-decoration: none;
+  font-weight: bold;
+  color: #003366;
+  margin: 0 50px;
+}
+.aryan {
+  font-size: 1.6rem;
+  font-weight: bold;
+  font-style: italic;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
+  border: 1px solid rgb(210, 210, 210);
 }
